# exclr8cef

./: .gitignore  LICENSE  README.md  cef.json
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml  upstream-check.yml
managed/Exclr8Cef/: Cef.cs  CefVersions.cs  Exclr8Cef.csproj  generate-bindings.rsp  runtime.json
managed/Exclr8Cef.ConsoleDemo/: Exclr8Cef.ConsoleDemo.csproj  Program.cs
managed/Exclr8Cef.SmokeTest/: Exclr8Cef.SmokeTest.csproj
managed/Exclr8Cef.WebView/: Exclr8Cef.WebView.csproj  KeyMap.cs
managed/Exclr8Cef.WebView.Demo/: App.axaml  Exclr8Cef.WebView.Demo.csproj
managed/runtime/: runtime.csproj
native/: CMakeLists.txt
native/demo/: CMakeLists.txt  Info.plist  main.c
native/helper/: helper-Info.plist  main.c
native/shim/: CMakeLists.txt  exclr8cef.cc  exclr8cef.h  exclr8cef_app.cc  exclr8cef_app.h  exclr8cef_client.cc  exclr8cef_client.h  exclr8cef_mac.mm  exclr8cef_osr.cc  exclr8cef_osr.h  exclr8cef_print.cc  exclr8cef_print.h  exclr8cef_win.cc  version_probe.c
samples/Exclr8Cef.ConsoleDemo/: Exclr8Cef.ConsoleDemo.csproj  Program.cs
samples/Exclr8Cef.WebView.Demo/: App.axaml.cs  AuthDialogWindow.axaml  AuthDialogWindow.axaml.cs  CompareWindow.axaml  CompareWindow.axaml.cs  EmbeddedHostWindow.axaml  EmbeddedHostWindow.axaml.cs  Exclr8Cef.WebView.Demo.csproj  IsolatedSessionWindow.axaml  IsolatedSessionWindow.axaml.cs  JsDialogWindow.axaml  JsDialogWindow.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  NativeCefView.cs  Program.cs  app.manifest  test-page.html
scripts/: build-avalonia-demo.sh  build-console-demo.sh  bump-cef.sh  check-cef-upstream.sh  download-cef.sh  generate-runtime-json.sh  regenerate-bindings.sh  stage-native-files.sh
src/Exclr8Cef/: Cef.Trampolines.cs  Cef.cs  CefBrowser.Cdp.cs  CefBrowser.Types.cs  CefBrowser.cs  CefRequestContext.cs  Exclr8Cef.csproj  generate-bindings.rsp  runtime.json
src/Exclr8Cef.Print/: CefPrint.cs  Exclr8Cef.Print.csproj
src/Exclr8Cef.WebView/: AvaloniaSetup.cs  Exclr8Cef.WebView.csproj  IWebView.cs  InputMapping.cs  KeyMap.cs  NativeWebView.cs  WebView.cs  WebViewTextInputMethodClient.cs
src/Exclr8Cef/Cdp/: AccessibilityClient.cs  CdpDomainClient.cs  CdpJson.cs  DomClient.cs  DomSnapshotClient.cs  InputClient.cs  NetworkClient.cs  OverlayClient.cs  PageClient.cs  PerformanceTimelineClient.cs  TargetClient.cs
src/runtime/: runtime.csproj
tests/Exclr8Cef.SmokeTest/: Exclr8Cef.SmokeTest.csproj  Program.cs
tests/Exclr8Cef.WebView.Tests/: Exclr8Cef.WebView.Tests.csproj  InputMappingTests.cs  KeyMapTests.cs
